--- a/Budget/angular.json
+++ b/Budget/angular.json
@@ -66,6 +66,14 @@
                 }
               ]
             },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
+            },
             "ci": {
               "progress": false
             }
@@ -79,6 +87,9 @@
           "configurations": {
             "production": {
               "browserTarget": "app:build:production"
+            },
+            "mock": {
+              "browserTarget": "app:build:mock"
             },
             "ci": {
               "progress": false
